--- a/pixi.toml
+++ b/pixi.toml
@@ -8,7 +8,6 @@ version = "0.1.0"
 
 [dependencies]
 python = "3.10.*"
-pytorch = ">=2.5.0,<3"
 torchvision = "*"
 torchaudio = "*"
 pandas = "*"
@@ -20,3 +19,6 @@ pyarrow = "*"
 timm = "*"
 pyturbojpeg = "*"
 imagehash = "*"
+opencv = ">=4.13.0,<5"
+pytorch = ">=2.10.0,<3"
+transformers = ">=5.2.0,<6"
