--- a/pixi.toml
+++ b/pixi.toml
@@ -23,3 +23,5 @@ opencv = ">=4.13.0,<5"
 pytorch = ">=2.10.0,<3"
 transformers = ">=5.2.0,<6"
 datasets = ">=4.5.0,<5"
+google-genai = ">=1.65.0,<2"
+python-dotenv = ">=1.2.1,<2"
