Add post-processor and tag-to-bbox mapping
Return tag-to-bbox mapping from draw_boxes and add a new post_processor module to extract LLM response blocks and replace <graphic> tags. Processor now imports the post-processor, extracts the <thinking> block and the final document, normalizes tag bounding boxes to a 0-1000 scale, replaces graphic tags with normalized coordinates, and prints/saves the final OCR output. Also limits processing to one sample with objects and one without, updates output filenames, and updates .pyc artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
-# pixi environments
+# --- Pixi Environments ---
+# Ignore the environments but keep the project configuration
 .pixi/*
 !.pixi/config.toml
+**/*.pyc
+# --- Python ---
+**/__pycache__/
+*.py[cod]
+*$py.class
+*.pyd
+.venv/
+venv/
+ENV/
 
-# temp data
-temp_data/*
-
+# --- Local Data & Secrets ---
 .env
-/output_dev
+.env.*
+temp_data/
+output_dev/
+
+# --- System Files ---
+.DS_Store
+Thumbs.db
